@@ -388,11 +388,13 @@
   <ItemGroup>
     <None Include="resources\application.bmp" />
     <None Include="resources\application.ico" />
+    <None Include="resources\application_go.ico" />
     <None Include="resources\black.ico" />
     <None Include="resources\bricks.bmp" />
     <None Include="resources\cog.ico" />
     <None Include="resources\cog_edit.bmp" />
     <None Include="resources\cog_edit.png" />
+    <None Include="resources\cog_go.ico" />
     <None Include="resources\cross.bmp" />
     <None Include="resources\folder.bmp" />
     <None Include="resources\magnifier.bmp" />
